fixed spacing above logo

--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,19 @@ body{
 	font-family: 'Merriweather', serif;
 }
 
-
-
 .header{
 	width: 100%;
 	text-align: center;
 	padding: 20px 0;
 	margin: auto;
+}
+
+.ad {
+	margin: 20px;
+}
+
+#logo{
+	margin: 20px;
 }
 
 .container{
